# gnu_trueprint

./: AUTHORS  BUGS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.mswin  acconfig.h  aclocal.m4  config.h  config.h.in  configure  configure.in  debug.c  debug.h  diffs.c  expand_str.c  index.c  index.h  input.c  input.h  lang_c.c  lang_c.h  lang_cxx.c  lang_cxx.h  lang_java.c  lang_pascal.c  lang_perl.c  lang_perl.h  lang_pike.c  lang_pike.h  lang_report.c  lang_sh.c  lang_text.c  lang_text.h  lang_verilog.c  language.c  language.h  libtool  (+18 more)
config/: mkinstalldirs  sys_errlist.m4
data/: printers  testprint
doc/: Makefile.in  stamp-vti  trueprint.info  trueprint.spec  trueprint.texi  version.texi
replace/: Makefile.am  Makefile.in  gettext.c  replace.h  strdup.c  strerror.c  strtol.c
scripts/: postscript-fc.pl  postscript-fc.sh
src/: Makefile.in  diffs.c  diffs.h  expand_str.h  headers.c  headers.h  index.c  index.h  lang_java.c  lang_java.h  lang_pascal.h  lang_perl.c  lang_report.h  lang_sh.c  lang_sh.h  lang_verilog.c  lang_verilog.h  language.c  main.c  main.h  options.c  options.h  output.c  output.h  postscript.c  print_prompt.h  printers_fl.h  tpsearch.c  utils.c  utils.h
tests/: Makefile.am  Makefile.in  OLDtest6.c  Run  test1.out  test10.out  test11.out  test12.out  test13.out  test14.out  test15.out  test16.out  test17.out  test18.out  test19.out  test2.c  test2.out  test20.out  test21  test21.out  test22.out  test23.out  test24.out  test25.out  test26.out  test27.out  test3.out  test35.out  test37.out  test4.new  test4.old  test4.out  test49.out  test5.out  test6.c  test6.out  test7  test7.out  test8.out  test9.out
